# tinyengine

./: CMakeLists.txt  Utils.c  Utils.cpp  Utils.h  _todo.txt  gamenode.cpp  gamenode.h  glutInput.cpp  main.c  main.cpp  mesh.cpp  mesh.h  modules.h  renderer.c  renderer.cpp  renderer.h  transform.cpp  transform.h
src/: glutInput.h  input.h  renderer.h  transform.cpp  transform.h
src/render/: CMakeLists.txt
src/render/.cache/clangd/index/: Camera.cpp.6F0095753D231805.idx  Camera.h.C400999F41107E70.idx  DirectionalLight.cpp.06D46BAFE785219A.idx  DirectionalLight.h.0E0968FE4C1892AB.idx  ImagePlaneMesh.cpp.59AE8707124988C0.idx  ImagePlaneMesh.h.D19DC45C8FDFB5BF.idx  Matrix4x4.cpp.7AC75615D5B6849B.idx  Matrix4x4.h.EC0FCAA62934BD00.idx  Mesh.cpp.7511B81D507F8F71.idx  Mesh.h.BF31323E9AA3FEDB.idx  Vec3.h.FFE0450CB4C443A5.idx  combined.cpp.694E85E366499FFD.idx  eventhandling.cpp.1A21DC19E3703B9C.idx  eventhandling.h.A5C8970A50F3225E.idx  fileio.cpp.6C7D487A97C8BC83.idx  fileio.h.5C51C46D2AF34BB1.idx  gl3.h.74BEDA59D76D5D2F.idx  gltools.cpp.A245CDB0DC403212.idx  gltools.h.19C60ED9222EB258.idx  renderable.cpp.8A888E812A7D5A62.idx  renderable.h.7F5163B3775DF7A0.idx
src/render/Shaders/: combine.fs  gauss_x.fs  gauss_y.fs  genShadowMap.vs  npr.fs  phongAndShadow.fs  phongAndShadow.vs  simple.fs  simple.vs
src/render/Textures/: bricks_normal.ppm
src/render/src/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  ImagePlaneMesh.cpp  ImagePlaneMesh.h  Matrix4x4.cpp  combined.cpp  fileio.cpp  fileio.h  gltools.cpp  renderable.cpp  renderable.h
src/render_reference/: CMakeCache.txt  Makefile  bump  cmake_install.cmake  combined  compile_commands.json  displacement  hdr  npr  phong  shadow  simple
src/render_reference/Shaders/: bumpmapping.fs  bumpmapping.vs  displacement.fs  displacement.tc  displacement.te  displacement.vs  gauss_x.vs  gradient.fs  gradient.vs  npr.vs  phong.fs  renderShadowMap.fs  renderShadowMap.vs
src/render_reference/Textures/: bricks_diffuse.ppm  bricks_displacement.ppm
src/render_reference/src/: BumpMapping.cpp  DisplacementMapping.cpp  Hdr.cpp  Matrix4x4.h  Mesh.cpp  Mesh.h  Npr.cpp  Phong.cpp  ShadowMapping.cpp  Simple.cpp  Vec3.h  combined.cpp  eventhandling.cpp  eventhandling.h  gltools.h
src/teogl/: mesh.h  openGLrenderer.h
teogl/: mesh.cpp  openGLrenderer.cpp
